// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Textarea /> Disabled 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    disabled={true}
    id="Textarea-mockId"
    value="I was here"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Displays error messages 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea invalid"
    id="Textarea-mockId"
  />
  <label
    className=""
    data-error="this is an error"
    htmlFor="Textarea-mockId"
  >
    Input with Error
  </label>
  <span
    className="helper-text"
    data-error="this is an error"
  />
</div>
`;

exports[`<Textarea /> Icon 1`] = `
<div
  className="input-field col"
>
  <Component
    className="prefix"
  />
  <textarea
    className="materialize-textarea"
    id="Textarea-mockId"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Label 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="Textarea-mockId"
  />
  <label
    className=""
    htmlFor="Textarea-mockId"
  >
    Write something here...
  </label>
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Placeholder 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="Textarea-mockId"
    placeholder="I was here"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Textarea 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="Textarea-mockId"
  />
  <span
    className="helper-text"
  />
</div>
`;

exports[`<Textarea /> Value 1`] = `
<div
  className="input-field col"
>
  <textarea
    className="materialize-textarea"
    id="Textarea-mockId"
    value="I was here"
  />
  <span
    className="helper-text"
  />
</div>
`;
